Services/servers/truenas-scale/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: truenas
  annotations:
    # If your Traefik is listening for this annotation:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nas.zlaya.tech`)
      kind: Rule
      services:
        - name: truenas
          port: 443
          scheme: https
          passHostHeader: true
      middlewares:
        - name: default-headers
          namespace: default
        - name: oidc-auth
          namespace: truenas
  tls: {}
